--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "e88f7d4e-d0d5-4edc-bba8-1044f18fa447",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -162,6 +163,31 @@
    "source": [
     "df_titanic = pd.read_csv(r'C:\\Users\\geleo\\pythonProject\\eda_project\\data\\Titanic-Dataset.csv')\n",
     "df_titanic.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e1fb075a-d527-4150-9b36-e44a23da5420",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Embarked\n",
+       "S    644\n",
+       "C    168\n",
+       "Q     77\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_titanic.Embarked.value_counts()"
    ]
   },
   {
@@ -495,8 +521,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a660578e-221d-4cdc-bf74-a0e82af50290",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = df_titanic[\"Survived\"]\n",
+    "X = df_titanic.drop(columns=[\"Survived\",'PassengerId', 'Name', 'Ticket'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f5429047-9f86-496e-b8f1-5ebc678281db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.20,\n",
+    "    random_state=42,\n",
+    "    stratify=y            \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "280dd5c5-b921-4f5d-85cd-49cab034b82d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pclass       0.0\n",
+       "Sex          0.0\n",
+       "Age         19.2\n",
+       "SibSp        0.0\n",
+       "Parch        0.0\n",
+       "Fare         0.0\n",
+       "Cabin       77.5\n",
+       "Embarked     0.3\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(X_train.isna().mean() * 100).round(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2c3f6a93-0d87-427c-8c65-1943a5aef27e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pclass       0.0\n",
+       "Sex          0.0\n",
+       "Age         22.3\n",
+       "SibSp        0.0\n",
+       "Parch        0.0\n",
+       "Fare         0.0\n",
+       "Cabin       75.4\n",
+       "Embarked     0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(X_test.isna().mean() * 100).round(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3c4790ae-d72e-44bf-ad1c-618ebd1ab92c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Survived\n",
+       "0    439\n",
+       "1    273\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "356a181a-bc6e-4c60-bd25-656bef90daa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Survived\n",
+       "0    110\n",
+       "1     69\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "959fd0aa-8d06-4feb-9af5-0252e23f90fd",
    "metadata": {},
    "outputs": [],
    "source": []
