--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,13 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
+   "id": "d4fb01d3-5af9-4569-a2ae-a1a306a40091",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "project_root = Path.cwd().parent          # текущий каталог = notebooks/\n",
+    "src_path     = project_root / \"src\"\n",
+    "if str(src_path) not in sys.path:\n",
+    "    sys.path.insert(0, str(src_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "e88f7d4e-d0d5-4edc-bba8-1044f18fa447",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from pipeline import inference_titanic_pipeline"
    ]
   },
   {
@@ -653,8 +669,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "959fd0aa-8d06-4feb-9af5-0252e23f90fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.829     0.882     0.855       110\n",
+      "           1      0.790     0.710     0.748        69\n",
+      "\n",
+      "    accuracy                          0.816       179\n",
+      "   macro avg      0.810     0.796     0.801       179\n",
+      "weighted avg      0.814     0.816     0.814       179\n",
+      "\n",
+      "ROC‑AUC: 0.8429512516469039\n"
+     ]
+    }
+   ],
+   "source": [
+    "inference_titanic_pipeline(X_train, X_test, y_train, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dceccb38-b7df-4cf3-82ab-1e19b8c8f85c",
    "metadata": {},
    "outputs": [],
    "source": []
